--- a/src/components/ExtraMenu/_media.scss
+++ b/src/components/ExtraMenu/_media.scss
@@ -202,7 +202,7 @@
 
 
 // Media queries for mobile content (landscape)
-@media screen and (max-height: 650px) and (min-width: 501px)/* and (max-width: 1000px)*/ {
+@media screen and (max-height: 650px) and (min-width: 501px) {
 
     // Help Pop Up content
     .extramenu_popup_container {
@@ -270,7 +270,7 @@
 
 
 // Media queries for small tablet content (square)
-@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 501px) and (max-width: 700px) {
+@media screen and (min-height: 650px) and (max-height: 725px) and (min-width: 501px) and (max-width: 700px) {
 
     // Help Pop Up content
     .extramenu_popup_container {
@@ -337,7 +337,7 @@
 
 
 // Media queries for tablet content (portrait)
-@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 701px) /* and (max-width: 1000px)*/ {
+@media screen and (min-height: 650px) and (max-height: 725px) and (min-width: 701px) {
 
     // Help Pop Up content
     .extramenu_popup_container {
@@ -347,7 +347,7 @@
 
 
 // Media queries for mobile high height square-ish screens
-@media screen and (min-height: 801px) and (min-width: 501px) and (max-width: 1201px) {
+@media screen and (min-height: 725px) and (min-width: 501px) and (max-width: 1201px) {
 
     // Help Pop Up content
     .extramenu_popup_container {
