--- a/src/components/FooterDescription/_media.scss
+++ b/src/components/FooterDescription/_media.scss
@@ -142,7 +142,7 @@
 
 
 // Media queries for mobile content (landscape)
-@media screen and (max-height: 650px) and (min-width: 501px) /* and (max-width: 1000px)*/ {
+@media screen and (max-height: 650px) and (min-width: 501px) {
 
     // Footer content
     .footer_container {
@@ -189,7 +189,7 @@
 
 
 // Media queries for small tablet content (square)
-@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 501px)/* and (max-width: 700px)*/ {
+@media screen and (min-height: 650px) and (max-height: 725px) and (min-width: 501px) {
 
     // Footer content
     .footer_container {
