--- a/src/components/HelpPopUp/_media.scss
+++ b/src/components/HelpPopUp/_media.scss
@@ -403,7 +403,7 @@
 
 
 // Media queries for small tablet content (square)
-@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 501px) and (max-width: 700px) {
+@media screen and (min-height: 650px) and (max-height: 725px) and (min-width: 501px) and (max-width: 700px) {
 
     // Help Pop Up content
     .help_popup_container {
@@ -483,7 +483,7 @@
 
 
 // Media queries for tablet content (portrait)
-@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 701px) /* and (max-width: 1000px)*/ {
+@media screen and (min-height: 650px) and (max-height: 725px) and (min-width: 701px) {
 
     // Help Pop Up content
     .help_popup_container {
@@ -497,13 +497,14 @@
 
 
 // Media queries for mobile high height square-ish screens
-@media screen and (min-height: 801px) and (min-width: 501px) and (max-width: 1201px) {
+@media screen and (min-height: 725px) and (min-width: 501px) and (max-width: 1201px) {
 
     // Help Pop Up content
     .help_popup_container {
         left: 20%;
         width: 60%;
-        top: 13.5%;
-        height: 80%;
+        top: 10%;
+        height: 85%;
+        padding: 1.25rem;
     }
 }
