--- a/src/components/KeyboardRow/_media.scss
+++ b/src/components/KeyboardRow/_media.scss
@@ -98,7 +98,7 @@
 
 
 // Media queries for mobile content (landscape low height)
-@media screen and (max-height: 351px) and (min-width: 500px) /* and (max-width: 1000px)*/ {
+@media screen and (max-height: 351px) and (min-width: 500px) {
 
       // Keyboard content
       .keyboard_row {
@@ -127,7 +127,7 @@
 
 
 // Media queries for mobile content (landscape)
-@media screen and (min-height: 351px) and (max-height: 650px) and (min-width: 501px) /* and (max-width: 1000px)*/ {
+@media screen and (min-height: 351px) and (max-height: 650px) and (min-width: 501px) {
 
     // Keyboard content
     .keyboard_row {
@@ -189,7 +189,7 @@
 
 
 // Media queries for tablet content (portrait)
-@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 701px) /* and (max-width: 1000px)*/ {
+@media screen and (min-height: 650px) and (max-height: 725px) and (min-width: 701px) {
 
     // Keyboard content
     .keyboard_row {
