--- a/src/components/Line/_media.scss
+++ b/src/components/Line/_media.scss
@@ -107,7 +107,7 @@
 
 
 // Media queries for mobile content (landscape low height)
-@media screen and (max-height: 351px) and (min-width: 500px) /* and (max-width: 1000px)*/ {
+@media screen and (max-height: 351px) and (min-width: 500px) {
 
      // Gameboard content
      .tile_row {
@@ -143,7 +143,7 @@
 
 
 // Media queries for mobile content (landscape)
-@media screen and (min-height: 351px) and (max-height: 650px) and (min-width: 501px) /* and (max-width: 1000px)*/ {
+@media screen and (min-height: 351px) and (max-height: 650px) and (min-width: 501px) {
 
     // Gameboard content
     .tile_row {
@@ -215,7 +215,7 @@
 
 
 // Media queries for tablet content (portrait)
-@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 701px) /* and (max-width: 1000px)*/ {
+@media screen and (min-height: 650px) and (max-height: 725px) and (min-width: 701px) {
 
     // Gameboard content
     .tile_row {
