--- a/src/components/Navbar/_media.scss
+++ b/src/components/Navbar/_media.scss
@@ -92,7 +92,7 @@
 
 
 // Media queries for mobile content (landscape)
-@media screen and (max-height: 650px) and (min-width: 501px) /* and (max-width: 1000px)*/ {
+@media screen and (max-height: 650px) and (min-width: 501px) {
 
     // Navbar content
     .navbar_container {
@@ -237,7 +237,7 @@
 
 
 // Media queries for tablet content (portrait)
-@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 701px)/* and (max-width: 1000px)*/ {
+@media screen and (min-height: 650px) and (max-height: 725px) and (min-width: 701px) {
 
     // Navbar content
     .navbar_container {
