--- a/src/components/SettingsPopUp/_media.scss
+++ b/src/components/SettingsPopUp/_media.scss
@@ -442,7 +442,7 @@
 
 
 // Media queries for mobile content (landscape)
-@media screen and (max-height: 650px) and (min-width: 501px)/* and (max-width: 1000px)*/ {
+@media screen and (max-height: 650px) and (min-width: 501px) {
 
     // Settings Pop Up content
     .settings_popup_container {
@@ -555,7 +555,7 @@
 
 
 // Media queries for small tablet content (square)
-@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 501px) and (max-width: 700px) {
+@media screen and (min-height: 650px) and (max-height: 725px) and (min-width: 501px) and (max-width: 700px) {
 
     // Settings Pop Up content
     .settings_popup_container {
@@ -664,7 +664,7 @@
 
 
 // Media queries for tablet content (portrait)
-@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 701px) /* and (max-width: 1000px)*/ {
+@media screen and (min-height: 650px) and (max-height: 725px) and (min-width: 701px) {
 
     // Settings Pop Up content
     .settings_popup_container {
@@ -705,10 +705,11 @@
 
 
 // Media queries for mobile high height square-ish screens
-@media screen and (min-height: 801px) and (min-width: 501px) and (max-width: 1201px) {
+@media screen and (min-height: 725px) and (min-width: 501px) and (max-width: 1201px) {
 
     // Settings Pop Up content
     .settings_popup_container {
+        top: 15%;
         left: 20%;
         width: 60%;
         height: fit-content;
