--- a/src/components/StatsPopUp/_media.scss
+++ b/src/components/StatsPopUp/_media.scss
@@ -246,7 +246,7 @@
 
 
 // Media queries for mobile content (landscape)
-@media screen and (max-height: 650px) and (min-width: 501px) /* and (max-width: 1000px)*/ {
+@media screen and (max-height: 650px) and (min-width: 501px) {
 
     // Stats Pop Up content
     .stats_popup_container {
@@ -332,7 +332,7 @@
 
 
 // Media queries for small tablet content (square)
-@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 501px) and (max-width: 700px) {
+@media screen and (min-height: 650px) and (max-height: 725px) and (min-width: 501px) and (max-width: 700px) {
 
     // Stats Pop Up content
     .stats_popup_container {
@@ -413,7 +413,7 @@
 
 
 // Media queries for tablet content (portrait)
-@media screen and (min-height: 650px) and (max-height: 800px) and (min-width: 701px) /* and (max-width: 1000px)*/ {
+@media screen and (min-height: 650px) and (max-height: 725px) and (min-width: 701px) {
 
     // Stats Pop Up content
     .stats_popup_container {
@@ -446,7 +446,7 @@
 
 
 // Media queries for mobile high height square-ish screens
-@media screen and (min-height: 801px) and (min-width: 501px) and (max-width: 1201px) {
+@media screen and (min-height: 725px) and (min-width: 501px) and (max-width: 1201px) {
 
     // Stats Pop Up content
     .stats_popup_container {
